fixed overflow in wallet

--- a/src/components/ContactContent/ContactContent.scss
+++ b/src/components/ContactContent/ContactContent.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     padding: 1rem;
     margin-top: -4rem;
+    max-width: 100%;
     &__title {
         font-family: $font-heading;
         font-weight: 400;
