--- a/src/pages/Wallet/Wallet.scss
+++ b/src/pages/Wallet/Wallet.scss
@@ -7,6 +7,8 @@
   height: 100vh;
   padding-left: 2rem;
   margin-left: 11rem;
+  overflow-y: hidden;
+
   &__message {
     display: flex;
     align-items: center;
